Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Mega_Farmers_Meet__c.field-meta.xml
<CustomField>
    <fullName>Mega_Farmers_Meet__c</fullName>
    <label>Mega Farmers Meets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>