Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Mega_Meet_Plumbing__c.field-meta.xml
<CustomField>
    <fullName>Mega_Meet_Plumbing__c</fullName>
    <formula>Mega_Plumbers_Meet__c  +  Plumber_Factory_Visit__c  +  Engineers_Meet__c  +  Architects_Meet__c  +  Plumbing_Dealers_Factory_Visit__c  +  Plumbing_Dealer_Distributor_Meets__c +  Builders_Meet__c +  Plumbing_DSM_Meet_Training__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mega Meet (Plumbing)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>