Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Mega_Meets_ACHVD__c.field-meta.xml
<CustomField>
    <fullName>Mega_Meets_ACHVD__c</fullName>
    <formula>if( Text(Vertical__c) == &apos;Column&apos;, (Mega_Meets_Column_Actual__c  /  Mega_Meets_Column_Target__c), if(Text(Vertical__c) == &apos;Plumbing&apos;, Mega_Meets_Plumbing_Actual__c / Mega_Meets_Plumbing__c,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mega Meets % ACHVD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>