Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Mega_Meets_Column__c.field-meta.xml
<CustomField>
    <fullName>Mega_Meets_Column__c</fullName>
    <formula>Mechanics_Factory_Visit__c + Mega_Mechanic_Meet__c  +  Mega_Farmers_Meet__c  +  Boarers_Meet__c + Column_DSM_Meet_Training__c + Column_Dealer_Meet__c +  Column_Distributors_Dealers_Mechanic_Fac__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mega Meets (Column)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>