Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Mega_Meets_Column_Actual__c.field-meta.xml
<CustomField>
    <fullName>Mega_Meets_Column_Actual__c</fullName>
    <formula>Column_Distributors_Dealers_Mechanic_Act__c  +  Column_Dealer_Distributor_Meets_Actual__c  +  Mega_Mechanic_Meets_Actuals__c +  Mechanics_Factory_Visit__c +  Mega_Farmers_Meets_Actuval__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mega Meets Column Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>