Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Mega_Meets_Column_Target__c.field-meta.xml
<CustomField>
    <fullName>Mega_Meets_Column_Target__c</fullName>
    <formula>Inshop_Boarers_Meet__c  +  Column_Distributors_Dealers_Mechanic_Fac__c  +  Column_Dealer_Meet__c  +  Mega_Farmers_Meet__c  +   Mega_Mechanic_Meet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mega Meets Column Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>