Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Mega_Meets_Plumbing__c.field-meta.xml
<CustomField>
    <fullName>Mega_Meets_Plumbing__c</fullName>
    <formula>Mega_Plumbers_Meet__c + Architects_Engineers_Consultants_Factory__c + Plumber_Factory_Visit__c + Engineers_Meet__c + Architects_Meet__c + Plumbing_Dealers_Factory_Visit__c + Plumbing_Dealer_Distributor_Meets__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mega Meets Plumbing (Target)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>