Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Mega_Meets_Plumbing_Actual__c.field-meta.xml
<CustomField>
    <fullName>Mega_Meets_Plumbing_Actual__c</fullName>
    <description>Mega Plumbers Meets, Architects / Engineers / Consultants Factory Visit, 
Plumbers Factory Visit, Architects Meets, 
Engineers Meets, Plumbing Dealers Factory Visits, Plumbing Dealer / Distributor Meets</description>
    <label>Mega Meets Plumbing (Actual)</label>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Other Activities</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Othet_Activities__c</field>
        <operation>equals</operation>
        <value>Promotional Activity</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Promotion_Type__c</field>
        <operation>equals</operation>
        <value>Mega Plumbers Meets, Architects / Engineers / Consultants Factory Visit, Plumbers Factory Visit, Architects Meets, Engineers Meets, Plumbing Dealers Factory Visits, Plumbing Dealer / Distributor Meets, Plumbing DSM Meet/Training</value>
    </summaryFilterItems>
    <summaryForeignKey>AP_Site_Visit__c.Target__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>