Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Mega_Meets_Project__c.field-meta.xml
<CustomField>
    <fullName>Mega_Meets_Project__c</fullName>
    <formula>Architects_Engineers_Consultants_Actual__c +  Architects_Meet__c + Builders_Meet__c +  Engineers_Meet__c + Projects_DSM_Meet_Training__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mega Meets Project</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>