Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Mega_Meets_Score__c.field-meta.xml
<CustomField>
    <fullName>Mega_Meets_Score__c</fullName>
    <formula>Mega_Meets_Weightage__c  * ( Mega_Meets_ACHVD__c /100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mega Meets - Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>