Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Mega_Meets_Weightage__c.field-meta.xml
<CustomField>
    <fullName>Mega_Meets_Weightage__c</fullName>
    <label>Mega Meets - Weightage</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>