Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Mega_or_Mini_meet__c.field-meta.xml
<CustomField>
    <fullName>Mega_or_Mini_meet__c</fullName>
    <formula>If(Mega_Meets_Plumbing__c != 0, &apos;PT/A&apos; ,&apos;A/A&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mega or Mini meet</label>
    <type>Text</type>
</CustomField>