Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Mega_Plumbers_Meet_Target_Projects__c.field-meta.xml
<CustomField>
    <fullName>Mega_Plumbers_Meet_Target_Projects__c</fullName>
    <label>Mega Plumbers Meet(Projects)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>