Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Mini_Farmers_Meet_Weightage__c.field-meta.xml
<CustomField>
    <fullName>Mini_Farmers_Meet_Weightage__c</fullName>
    <label>Mini Farmers Meet - Weightage</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>