Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Mini_Meet_Column_ACHVD__c.field-meta.xml
<CustomField>
    <fullName>Mini_Meet_Column_ACHVD__c</fullName>
    <formula>Mini_Meets_Column_Actual__c /   Mini_Meets_Column__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mini Meet Column % ACHVD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>