Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Mini_Meet_Column_Score__c.field-meta.xml
<CustomField>
    <fullName>Mini_Meet_Column_Score__c</fullName>
    <formula>Mini_Meet_Column_Weightage__c  * ( Mini_Meet_Column_ACHVD__c /100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mini Meet Column - Score`</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>