Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Mini_Meets_Column__c.field-meta.xml
<CustomField>
    <fullName>Mini_Meets_Column__c</fullName>
    <formula>InShop_Mechanic_Meet__c  +  Inshop_Boarers_Meet__c +  Exhibition_Agri_Fairs_Actuval__c  + Mini_Farmers_Meet_Weightage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mini Meets (Column)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>