Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Mini_Meets_Column_Actual__c.field-meta.xml
<CustomField>
    <fullName>Mini_Meets_Column_Actual__c</fullName>
    <label>Mini Meets Column (Actual)</label>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Other Activities</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Othet_Activities__c</field>
        <operation>equals</operation>
        <value>Promotional Activity</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Promotion_Type__c</field>
        <operation>equals</operation>
        <value>Inshop Mechanic Meets, Inshop Borers Meets, Column DSM Meet / Training, Mini Farmer Meet</value>
    </summaryFilterItems>
    <summaryForeignKey>AP_Site_Visit__c.Target__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>