Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Mini_Meets_Plumbing__c.field-meta.xml
<CustomField>
    <fullName>Mini_Meets_Plumbing__c</fullName>
    <formula>InSHOP_Plumber_meet__c +  Naaka_Meet__c +  Onsite_Plumber_Meet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mini Meets Plumbing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>