Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Mini_Meets_Project__c.field-meta.xml
<CustomField>
    <fullName>Mini_Meets_Project__c</fullName>
    <formula>Onsite_Plumber_Meet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mini Meets Project</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>