Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Monthly_Billed_Outlets__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Billed_Outlets__c</fullName>
    <label>Monthly Billed Outlets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>