Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/My_plan_This_month__c.field-meta.xml
<CustomField>
    <fullName>My_plan_This_month__c</fullName>
    <formula>IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

HYPERLINK(&quot;#/sObject/00O3A000009Lpqu/view?fv0=&quot; &amp;   Id  , &quot;My Tour Plan Report&quot; , &quot;_self&quot;), 

HYPERLINK(&quot;/00O3A000009Lpqu?pv0=&quot; &amp; Id, &quot;My Tour Plan Report&quot; , &quot;_self&quot;)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To view your tour plan of this month.click on the link</inlineHelpText>
    <label>My plan -This month</label>
    <type>Text</type>
</CustomField>