Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/My_visits_This_Month__c.field-meta.xml
<CustomField>
    <fullName>My_visits_This_Month__c</fullName>
    <formula>IF($User.UIThemeDisplayed=&quot;Theme4d&quot;, 

HYPERLINK(&quot;#/sObject/00O30000008UhQh/view?fv0=&quot; &amp; Id , &quot;My Site Visits&quot;, &quot;_self&quot;), 

HYPERLINK(&quot;/00O30000008UhQh?pv0=&quot; &amp; Id, &quot;My Site Visits&quot;, &quot;_self&quot;) 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My visits-This Month</label>
    <type>Text</type>
</CustomField>