Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Naaka_Meet__c.field-meta.xml
<CustomField>
    <fullName>Naaka_Meet__c</fullName>
    <label>Naaka Meets</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>