Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/New_dealer_activation_Growth__c.field-meta.xml
<CustomField>
    <fullName>New_dealer_activation_Growth__c</fullName>
    <label>New dealer activation-Growth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>