Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/New_dealers_activation__c.field-meta.xml
<CustomField>
    <fullName>New_dealers_activation__c</fullName>
    <label>New Dealers Activation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>