Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/New_dealers_activation_ACHVD__c.field-meta.xml
<CustomField>
    <fullName>New_dealers_activation_ACHVD__c</fullName>
    <formula>New_dealers_activation_Actual__c / New_dealers_activation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New dealers activation % ACHVD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>