Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/New_dealers_activation_Actual__c.field-meta.xml
<CustomField>
    <fullName>New_dealers_activation_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>New dealers activation - Actual</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>