Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/New_dealers_activation_Score__c.field-meta.xml
<CustomField>
    <fullName>New_dealers_activation_Score__c</fullName>
    <formula>New_dealers_activation_Weightage__c  *  (New_dealers_activation_ACHVD__c /100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New dealers activation - Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>