Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/New_dealers_activation_Weightage__c.field-meta.xml
<CustomField>
    <fullName>New_dealers_activation_Weightage__c</fullName>
    <label>New Dealers Activation - Weightage</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>