Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/NEW_DIRECT_DEALER_TO_DEPOT__c.field-meta.xml
<CustomField>
    <fullName>NEW_DIRECT_DEALER_TO_DEPOT__c</fullName>
    <label>New Direct Dealer To Depot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>