Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/New_Direct_Dealer_To_Depot_Actual__c.field-meta.xml
<CustomField>
    <fullName>New_Direct_Dealer_To_Depot_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>New Direct Dealer To Depot Actual</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>