Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/New_distributer_activation__c.field-meta.xml
<CustomField>
    <fullName>New_distributer_activation__c</fullName>
    <label>New Distributor Activation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>