Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/New_Distributer_Activation_ACHVD__c.field-meta.xml
<CustomField>
    <fullName>New_Distributer_Activation_ACHVD__c</fullName>
    <formula>New_Distributer_Activation_Actuals__c / New_distributer_activation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Distributor Activation % ACHVD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>