Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/New_Distributer_Activation_Actuals__c.field-meta.xml
<CustomField>
    <fullName>New_Distributer_Activation_Actuals__c</fullName>
    <defaultValue>0</defaultValue>
    <label>New Distributor Activation - Actuals</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>