Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/NEW_DISTRIBUTOR__c.field-meta.xml
<CustomField>
    <fullName>NEW_DISTRIBUTOR__c</fullName>
    <label>New Distributor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>