Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/New_Distributor_Activation_Score__c.field-meta.xml
<CustomField>
    <fullName>New_Distributor_Activation_Score__c</fullName>
    <formula>New_Distributer_Activation_Weightage__c  * ( New_Distributer_Activation_ACHVD__c /100)</formula>
    <label>New Distributor Activation - Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>