Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/New_DP_Dealer_activation_column_target__c.field-meta.xml
<CustomField>
    <fullName>New_DP_Dealer_activation_column_target__c</fullName>
    <formula>DP_Activation_Target__c + SUB_DEALER_DEVELOPMENT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New DP/Dealer activation column target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>