Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/New_markets_opened__c.field-meta.xml
<CustomField>
    <fullName>New_markets_opened__c</fullName>
    <label>New Markets Opened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>