Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/New_Markets_Opened_ACHVD__c.field-meta.xml
<CustomField>
    <fullName>New_Markets_Opened_ACHVD__c</fullName>
    <formula>New_Markets_Opened_Actuals__c / New_markets_opened__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Markets Opened % ACHVD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>