Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/New_Markets_Opened_Score__c.field-meta.xml
<CustomField>
    <fullName>New_Markets_Opened_Score__c</fullName>
    <formula>New_Markets_Opened_Weightage__c  *  (New_Markets_Opened_ACHVD__c   / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Markets Opened - Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>