Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/New_Markets_Opened_Weightage__c.field-meta.xml
<CustomField>
    <fullName>New_Markets_Opened_Weightage__c</fullName>
    <label>New Markets Opened - Weightage</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>