Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/no_of_days_in_a_month__c.field-meta.xml
<CustomField>
    <fullName>no_of_days_in_a_month__c</fullName>
    <formula>( End_Date__c-Start_Date__c)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>no of days in a month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>