Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/No_of_days_worked_in_month_visit__c.field-meta.xml
<CustomField>
    <fullName>No_of_days_worked_in_month_visit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No of days worked in month(visit)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>