Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/No_of_days_worked_ProjectVisit_visits__c.field-meta.xml
<CustomField>
    <fullName>No_of_days_worked_ProjectVisit_visits__c</fullName>
    <label>No of days worked ProjectVisit(visits)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>