Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/NO_OF_VISITS__c.field-meta.xml
<CustomField>
    <fullName>NO_OF_VISITS__c</fullName>
    <label>No Of Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>