Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/No_of_Visits_Actual_Project__c.field-meta.xml
<CustomField>
    <fullName>No_of_Visits_Actual_Project__c</fullName>
    <label>No of Visits Actual(Project)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>