Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/No_of_visits_Score_field_work__c.field-meta.xml
<CustomField>
    <fullName>No_of_visits_Score_field_work__c</fullName>
    <formula>No_of_visits_Weightage_total_visits__c * (No_of_visits_total_visits_ACHVD__c/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No.of visits Score ( field work)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>