Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/No_of_visits_Target_total_visits__c.field-meta.xml
<CustomField>
    <fullName>No_of_visits_Target_total_visits__c</fullName>
    <formula>Head_Quarter_Daily_Calls__c +  HEAD_QUARTER_METRO_Daily_Calls__c + Head_Quarter_State_Capital_Daily_Calls__c + Out_Station_Daily_Calls__c + Ex_Station_Daily_Calls__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No.of visits Target ( total visits)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>