Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/No_of_visits_total_visits__c.field-meta.xml
<CustomField>
    <fullName>No_of_visits_total_visits__c</fullName>
    <label>No.of visits Actual ( total visits)​</label>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Visits</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Party_Type__c</field>
        <operation>equals</operation>
        <value>Dealer</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Dealer_visit_actual_calculation__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>AP_Site_Visit__c.Target__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>