Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/No_of_visits_total_visits_ACHVD__c.field-meta.xml
<CustomField>
    <fullName>No_of_visits_total_visits_ACHVD__c</fullName>
    <formula>No_of_visits_total_visits__c / No_of_visits_Target_total_visits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No.of visits ( total visits)​ %ACHVD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>