Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/No_of_visits_total_visits_column__c.field-meta.xml
<CustomField>
    <fullName>No_of_visits_total_visits_column__c</fullName>
    <label>No of visits total visits column</label>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Visits</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AP_Site_Visit__c.Party_Type__c</field>
        <operation>equals</operation>
        <value>Dealer, Distributor</value>
    </summaryFilterItems>
    <summaryForeignKey>AP_Site_Visit__c.Target__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>