Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/No_of_visits_Weightage_total_visits__c.field-meta.xml
<CustomField>
    <fullName>No_of_visits_Weightage_total_visits__c</fullName>
    <label>No.of visits Weightage ( total visits)​</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>