Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Number_of_Orders_taken_E_Visit__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Orders_taken_E_Visit__c</fullName>
    <label>Number of Orders taken - E Visit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>