Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Number_of_Orders_taken_Physical_EC__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Orders_taken_Physical_EC__c</fullName>
    <label>Number of Orders taken - Physical(EC)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>