Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Onsite_Plumber_Meet__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Plumber_Meet__c</fullName>
    <label>Onsite Plumber Meet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>