Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Order_to_Visit_Ratio_E_Visit_EC__c.field-meta.xml
<CustomField>
    <fullName>Order_to_Visit_Ratio_E_Visit_EC__c</fullName>
    <label>Order to Visit Ratio - E Visit(EC)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>