Partial_14Dec2021/force-app/main/default/objects/Target__c/fields/Order_to_Visit_Ratio_Physical__c.field-meta.xml
<CustomField>
    <fullName>Order_to_Visit_Ratio_Physical__c</fullName>
    <label>Order to Visit Ratio - Physical</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>